welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:6: error: Unmatched closing brace '}' ignored here
}
^in1020:8: error: eof expected but '}' found.
 }
 ^